Fix community section alignment

--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ img.hero-bg {
     text-align: justify;
 }
 
-/* Community section @fixme columns don't wrap well in mobile, change to wrapped rows?*/
+/* Community section */
 
 #community {
     background: linear-gradient(180deg, #5E1978 24.36%, #05CCCB 100%);
@@ -210,13 +210,36 @@ img.hero-bg {
 }
 
 .community-container{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr;
     justify-content: center;
     margin-top: 2em;
 }
 
+@media (min-width: 720px) { 
+    .community-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 1200px) { 
+    .community-container{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.community-container .column:nth-child(odd){
+    margin-top: 10vh;
+}
+
 .community-post {
+    align-self: auto;
     padding: 1em;
     margin: 2em 1em;
     max-width: 434px;
